# Project_Python_Bootcamp

Aula_1/: main.py
Aula_2/: Aula_02.py  Exemplo_Try.py
Aula_3/: aula_03.py  desafio.py  exercicios.py
Aula_4/: Aula_04.py  Aula_04_2.py
Aula_5/: pyproject.toml
Aula_7/: Etl.py  main.py
Aula_8/: pyproject.toml
Aula_8/App/: etl.py  pipeline.py  schema.py
