[tool.poetry]
name = "aula-8"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasdastre10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.26.1"
pandas = "^2.3.3"
pyarrow = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
